<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearlayout_list"
    android:background="@drawable/shape_border"
    android:layout_margin="5dp">
    <TextView
        android:id="@+id/tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/category"
        android:layout_alignParentStart="true"
        style="@style/title"/>
    <TextView
        android:id="@+id/tv_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/detail"
        android:layout_toEndOf="@id/tv_category"
        style="@style/title"/>
    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:layout_below="@+id/tv_detail"
        android:layout_alignParentStart="true"
        style="@style/detail"/>
    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tt"
        android:layout_toEndOf="@id/tv_date"
        android:layout_below="@id/tv_detail"
        style="@style/detail"/>

    <TextView
        android:id="@+id/tv_time"
        style="@style/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_detail"
        android:layout_marginStart="40dp"
        android:layout_marginTop="17dp"
        android:layout_toEndOf="@id/tv1"
        android:hint="@string/time" />


</RelativeLayout>