<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    tools:context=".Ui.AddReminderActivity">

    <lal.adhish.gifprogressbar.GifView
        android:id="@+id/gf_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />
    <TextView
        android:id="@+id/tv_cat"
        style="@style/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/select_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gf_add"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/sp_category"
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_border"
        android:gravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cat"
        app:layout_constraintVertical_bias="0.0" />




    <EditText
        android:id="@+id/et_detail"
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_border"
        android:hint="@string/detail"
        android:inputType="textMultiLine"
        android:lines="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_category"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="@string/detail" />

    <TextView
        android:id="@+id/tv_date"
        style="@style/date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:hint="@string/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_detail"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/tv"
        style="@style/date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_date"
        app:layout_constraintTop_toBottomOf="@+id/et_detail"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_time"
        style="@style/date_time"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv"
        app:layout_constraintTop_toBottomOf="@+id/et_detail"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_add_date"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:text="@string/new_date_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toEndOf="@+id/tv_time"
        app:layout_constraintTop_toBottomOf="@+id/et_detail"
        app:layout_constraintVertical_bias="0.008" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_button"
        android:text="@string/add_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
    <Button
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_button"
        android:text="@string/edit_reminder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>